fix: disable margin collapse and fix top hr

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -28,7 +28,7 @@
 
 body {
   margin: 0;
-  padding: 0;
+  padding: 0.02px;
   color: var(--text-950);
   background-color: var(--background-50);
 }
